--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>
-        Hay un Pais en el Mundo
+        Hay un Pa&iacutes en el Mundo
     </title>
     <style>
     
@@ -29,15 +29,15 @@
     <div>
         <p>
             Colocado
-            en un inverosímil archipiélago
-            de azúcar y de alcohol.
+            en un inveros&iacutemil archipi&eacutelago
+            de az&uacutecar y de alcohol.
         </p>
     </div>
     <div>
         <p>
             Sencillamente
             liviano,
-            como un ala de murciélago
+            como un ala de murci&eacutelago
             apoyado en la brisa.
         </p>
     </div>
@@ -46,14 +46,14 @@
             Sencillamente
             claro,
             como el rastro del beso en las solteronas
-            antiguas o el día en los tejados.
+            antiguas o el d&iacutea en los tejados.
         </p>
     </div>
     <div>
         <p>
             Sencillamente
             frutal. Fluvial. Y material. Y sin embargo
-            sencillamente tórrido y pateado
+            sencillamente t&oacuterrido y pateado
             como una adolescente en las caderas.
         </p>
     </div>
@@ -74,19 +74,19 @@
             suma de la vida
             y entre tanto
             cuatro cordilleras cardinales
-            y una inmensa bahía y otra inmensa bahía,
-            tres penínsulas con islas adyacentes.
+            y una inmensa bah&iacutea y otra inmensa bah&iacutea,
+            tres pen&iacutensulas con islas adyacentes.
         </p>
     </div>
     <div>
         <p>
-            y un asombro de ríos verticales
+            y un asombro de r&iacuteos verticales
             y tierra bajo los árboles y tierra
-            bajo los ríos y en la falda del monte
-            y al pie de la colina y detrás del horizonte
+            bajo los r&iacuteos y en la falda del monte
+            y al pie de la colina y detr&aacutes del horizonte
             y tierra desde el canto de los gallos
             y tierra bajo el galope de los caballos
-            y tierra sobre el día, bajo el mapa, alrededor
+            y tierra sobre el d&iacutea, bajo el mapa, alrededor
             y debajo de todas las huellas
             y en medio del amor.
         </p>
