--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div>
-        <p>
+        <h1>
             Hay
-        </p>
+        </h1>
     </div>
     <div>
         <p>
-            un pa&iacutes en el mundo
-            colocado
+            un pa&iacutes en el mundo<br>
+            colocado<br>
             en el mismo trayecto del sol.
         </p>
     </div>
@@ -28,32 +28,32 @@
     </div>
     <div>
         <p>
-            Colocado
-            en un inveros&iacutemil archipi&eacutelago
+            Colocado<br>
+            en un inveros&iacutemil archipi&eacutelago<br>
             de az&uacutecar y de alcohol.
         </p>
     </div>
     <div>
         <p>
-            Sencillamente
-            liviano,
-            como un ala de murci&eacutelago
+            Sencillamente<br>
+            liviano,<br>
+            como un ala de murci&eacutelago<br>
             apoyado en la brisa.
         </p>
     </div>
     <div>
         <p>
-            Sencillamente
-            claro,
-            como el rastro del beso en las solteronas
+            Sencillamente<br>
+            claro,<br>
+            como el rastro del beso en las solteronas<br>
             antiguas o el d&iacutea en los tejados.
         </p>
     </div>
     <div>
         <p>
-            Sencillamente
-            frutal. Fluvial. Y material. Y sin embargo
-            sencillamente t&oacuterrido y pateado
+            Sencillamente<br>
+            frutal. Fluvial. Y material. Y sin embargo<br>
+            sencillamente t&oacuterrido y pateado<br>
             como una adolescente en las caderas.
         </p>
     </div>
@@ -69,25 +69,25 @@
     </div>
     <div>
         <p>
-            En verdad.
-            Con tres millones
-            suma de la vida
-            y entre tanto
-            cuatro cordilleras cardinales
-            y una inmensa bah&iacutea y otra inmensa bah&iacutea,
-            tres pen&iacutensulas con islas adyacentes.
+            En verdad.<br>
+            Con tres millones<br>
+            suma de la vida<br>
+            y entre tanto<br>
+            cuatro cordilleras cardinales<br>
+            y una inmensa bah&iacutea y otra inmensa bah&iacutea,<br>
+            tres pen&iacutensulas con islas adyacentes.<br>
         </p>
     </div>
     <div>
         <p>
-            y un asombro de r&iacuteos verticales
-            y tierra bajo los árboles y tierra
-            bajo los r&iacuteos y en la falda del monte
-            y al pie de la colina y detr&aacutes del horizonte
-            y tierra desde el canto de los gallos
-            y tierra bajo el galope de los caballos
-            y tierra sobre el d&iacutea, bajo el mapa, alrededor
-            y debajo de todas las huellas
+            y un asombro de r&iacuteos verticales<br>
+            y tierra bajo los árboles y tierra<br>
+            bajo los r&iacuteos y en la falda del monte<br>
+            y al pie de la colina y detr&aacutes del horizonte<br>
+            y tierra desde el canto de los gallos<br>
+            y tierra bajo el galope de los caballos<br>
+            y tierra sobre el d&iacutea, bajo el mapa, alrededor<br>
+            y debajo de todas las huellas<br>
             y en medio del amor.
         </p>
     </div>
