--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>
         Hay un Pa&iacutes en el Mundo
     </title>
-    <style>
-    
-    </style>
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <div>
@@ -15,60 +14,60 @@
         </h1>
     </div>
     <div>
-        <p>
+        <h2>
             un pa&iacutes en el mundo<br>
             colocado<br>
             en el mismo trayecto del sol.
-        </p>
+        </h2>
     </div>
     <div>
-        <p>
+        <h3>
             Oriundo de la noche
-        </p>
+        </h3>
     </div>
-    <div>
-        <p>
+    <div class="subtitle">
+        <p class="subtitle__content">
             Colocado<br>
             en un inveros&iacutemil archipi&eacutelago<br>
             de az&uacutecar y de alcohol.
         </p>
     </div>
-    <div>
-        <p>
+    <div class="stanza1">
+        <p class="stanza1__content">
             Sencillamente<br>
             liviano,<br>
             como un ala de murci&eacutelago<br>
             apoyado en la brisa.
         </p>
     </div>
-    <div>
-        <p>
+    <div class="stanza2">
+        <p class="stanza2__content">
             Sencillamente<br>
             claro,<br>
             como el rastro del beso en las solteronas<br>
             antiguas o el d&iacutea en los tejados.
         </p>
     </div>
-    <div>
-        <p>
+    <div class="stanza3">
+        <p class="stanza3__content">
             Sencillamente<br>
             frutal. Fluvial. Y material. Y sin embargo<br>
             sencillamente t&oacuterrido y pateado<br>
             como una adolescente en las caderas.
         </p>
     </div>
-    <div>
-        <p>
+    <div class="stanza4">
+        <p class="stanza4__content">
             Sencillamente triste y oprimido.
         </p>
     </div>
-    <div>
-        <p>
+    <div class="stanza5">
+        <p class="stanza5__content">
             Sencillamente agreste y despoblado.
         </p>
     </div>
-    <div>
-        <p>
+    <div class="stanza6">
+        <p class="stanza6__content">
             En verdad.<br>
             Con tres millones<br>
             suma de la vida<br>
@@ -78,8 +77,8 @@
             tres pen&iacutensulas con islas adyacentes.<br>
         </p>
     </div>
-    <div>
-        <p>
+    <div class="stanza7">
+        <p class="stanza7__content">
             y un asombro de r&iacuteos verticales<br>
             y tierra bajo los árboles y tierra<br>
             bajo los r&iacuteos y en la falda del monte<br>
@@ -91,8 +90,6 @@
             y en medio del amor.
         </p>
     </div>
-
-
 </body>
 
 </html>
