--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div>
+    <div class="flex-container">
+        <img class="leaf" src="Public/leaf-01.png" alt="">
         <h1>
             Hay
         </h1>
     </div>
-    <div>
+    <div class="head2">
+        <div>
+
+        </div>
         <h2>
             un pa&iacutes en el mundo<br>
             colocado<br>
             en el mismo trayecto del sol.
         </h2>
     </div>
-    <div>
+    <div class="flex-containerB">
         <h3>
             Oriundo de la noche
         </h3>
+        <div class="circle">
+            <img class="cicle" src="Public/circle-01.png" alt="">
+        </div>
     </div>
+    
     <div class="subtitle">
         <p class="subtitle__content">
             Colocado<br>
@@ -32,6 +40,7 @@
             de az&uacutecar y de alcohol.
         </p>
     </div>
+    <div class="flex-containerC">
     <div class="stanza1">
         <p class="stanza1__content">
             Sencillamente<br>
@@ -48,6 +57,8 @@
             antiguas o el d&iacutea en los tejados.
         </p>
     </div>
+</div>
+<div class="flex-containerD">
     <div class="stanza3">
         <p class="stanza3__content">
             Sencillamente<br>
@@ -61,6 +72,8 @@
             Sencillamente triste y oprimido.
         </p>
     </div>
+</div>
+<div class="flex-containerE">
     <div class="stanza5">
         <p class="stanza5__content">
             Sencillamente agreste y despoblado.
@@ -77,6 +90,7 @@
             tres pen&iacutensulas con islas adyacentes.<br>
         </p>
     </div>
+</div>
     <div class="stanza7">
         <p class="stanza7__content">
             y un asombro de r&iacuteos verticales<br>
