--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="stanza7">
         <p class="stanza7__content">
             y un asombro de r&iacuteos verticales<br>
-            y tierra bajo los árboles y tierra<br>
+            y tierra bajo los &aacuterboles y tierra<br>
             bajo los r&iacuteos y en la falda del monte<br>
             y al pie de la colina y detr&aacutes del horizonte<br>
             y tierra desde el canto de los gallos<br>
